bug tracker app setup

--- a/artefacts/bugTracker-template.html
+++ b/artefacts/bugTracker-template.html
@@ -18,10 +18,12 @@
  -->
  <!-- ng new bug-tracker-app -->
  <style>
-     /* bug-tracker.component.css */
+     /* styles.css */
      body{
          margin : 50px;
      }
+
+     /* bug-tracker.component.css */
      section{
          margin-bottom: 10px;
      }
