--- a/artefacts/bugTracker-template.html
+++ b/artefacts/bugTracker-template.html
@@ -1,9 +1,12 @@
 <!-- 
     Use cases:
-    1. Add new bugs
-    2. List the added bugs
+    Treat the bug as a string and implement (1, 2 & 4)
+    Create a Bug interface to treat the bug as on object and implement (3, 5 & 6)
+    
+    (done) 1. Add new bugs
+    (done) 2. List the added bugs
     3. Toggle the 'closed' status of any bug
-    4. Remove any bug
+    (done) 4. Remove any bug
     5. Remove closed bugs
     6. Display stats (# of bugs / # of closed bugs)
     7. Improvise bug display
