--- a/artefacts/bugTracker-template.html
+++ b/artefacts/bugTracker-template.html
@@ -5,10 +5,10 @@
     
     (done) 1. Add new bugs
     (done) 2. List the added bugs
-    3. Toggle the 'closed' status of any bug
+    (done) 3. Toggle the 'closed' status of any bug
     (done) 4. Remove any bug
-    5. Remove closed bugs
-    6. Display stats (# of bugs / # of closed bugs)
+    (done) 5. Remove closed bugs
+    (done) 6. Display stats (# of bugs / # of closed bugs)
     7. Improvise bug display
     8. Sort the bugs
     9. Persist the bugs in the 'localStorage'
