--- a/artefacts/bugTracker-template.html
+++ b/artefacts/bugTracker-template.html
@@ -9,7 +9,7 @@
     (done) 4. Remove any bug
     (done) 5. Remove closed bugs
     (done) 6. Display stats (# of bugs / # of closed bugs)
-    7. Improvise bug display
+    (done) 7. Improvise bug display
     8. Sort the bugs
     9. Persist the bugs in the 'localStorage'
     10. Display 'createdAt' for each bug
