--- a/artefacts/bugTracker-template.html
+++ b/artefacts/bugTracker-template.html
@@ -11,7 +11,7 @@
     (done) 6. Display stats (# of bugs / # of closed bugs)
     (done) 7. Improvise bug display
     (done) 8. Sort the bugs
-    9. Persist the bugs in the 'localStorage'
+    (done) 9. Persist the bugs in the 'localStorage'
         window.localStorage (object)
         ================================================================
         * key/value store
