--- a/artefacts/bugTracker-template.html
+++ b/artefacts/bugTracker-template.html
@@ -31,6 +31,10 @@
             - length 
 
     10. Display 'createdAt' for each bug
+        using moment
+        npm install moment
+        import * as moment from 'moment'
+        
     11. Implement data validation 
     12. Persist the bugs in the server
     13. Make the bugs accessible using unique urls (routing)
