using moment by creating the 'elapsed' pipe

--- a/artefacts/bugTracker-template.html
+++ b/artefacts/bugTracker-template.html
@@ -30,11 +30,11 @@
             - clear()
             - length 
 
-    10. Display 'createdAt' for each bug
+    (done) 10. Display 'createdAt' for each bug
         using moment
         npm install moment
         import * as moment from 'moment'
-        
+
     11. Implement data validation 
     12. Persist the bugs in the server
     13. Make the bugs accessible using unique urls (routing)
