Persist the bugs in the server - implementation

--- a/artefacts/bugTracker-template.html
+++ b/artefacts/bugTracker-template.html
@@ -36,7 +36,7 @@
         import * as moment from 'moment'
 
     11. Implement data validation 
-    12. Persist the bugs in the server
+    (done) 12. Persist the bugs in the server
     13. Make the bugs accessible using unique urls (routing)
     14. Implement Unit & E2E tests
     15. Package the app for deployment
